# ct6k

./: .gitignore  CMakeLists.txt  Comp-o-Tron 6000 Programming Guide.odt  Comp-o-Tron 6000 User Guide.odt  HISTORY  Makefile  README  TODO  ct6k.desktop  mkdeb.sh  win-config-installer.sh  win-install-clean.sh
ct6k-gui/: CMakeLists.txt  controlpanel.cpp  controlpanel.hpp  cotwindow.cpp  cotwindow.hpp  cpuspinner.cpp  cpuspinner.hpp  cpuworker.cpp  cpuworker.hpp  ct6k-info.h  ct6k.qrc  dword.cpp  dword.hpp  flagdisplay.cpp  flagdisplay.hpp  indicator.cpp  indicator.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  printerwindow.cpp  printerwindow.hpp  registerset.cpp  registerset.hpp
examples/: checker.asm  checker.cta  devs.cta  example.asm  example1.asm  example1.cta  fault.asm  finddev.cta  hello.asm  hello.cta  printbuf.cta  printcards.asm  printcards.cta  printhex.cta  printmsb.cta  punchbuf.cta  readcard.cta  stacktest.asm  swabcards.asm  swabcards.cta  unpack.cta  wait.cta
examples/tests/: signed.asm
gui/: CMakeLists.txt  controlpanel.cpp  controlpanel.hpp  cotwindow.cpp  cotwindow.hpp  cpuspinner.cpp  cpuspinner.hpp  cpuworker.cpp  cpuworker.hpp  ct6k.qrc  dword.cpp  flagdisplay.cpp  flagdisplay.hpp  indicator.cpp  mainwindow.cpp  printerwindow.hpp  registerset.hpp
pkg/config/: config.xml
src/: Makefile  arch.h  asm_main.cpp  boost_test.cpp  cardotron.cpp  cardotron.hpp  cardpunch.cpp  cpu.cpp  cpu.hpp  emu_main.cpp  foo.cpp  hw.h  instruction.cpp  instruction.hpp  makefile.nmake  memory.cpp  memory.hpp  memtest.cpp  periph.cpp  periph.hpp  printotron.cpp  printotron.hpp  segment.cpp  segment.hpp  storotron.cpp  symref.cpp  symref.hpp  test.asm  ui-priv.hpp  ui.cpp  ui.hpp
tools/: CMakeLists.txt  arch.h  asm_main.cpp  cardotron.cpp  cardotron.hpp  cardpunch.cpp  cpu.cpp  cpu.hpp  hw.h  instruction.hpp  loadprog.cta  makefile.nmake  memory.cpp  periph.cpp  printotron.hpp  storotron.hpp  ui.cpp  ui.hpp
